--- a/index.html
+++ b/index.html
@@ -9,26 +9,22 @@
 </head>
 <body>
     <header>
-        <div class="top-btm-navs flex">
-                    <!-- <div class="logo">
-            <img src="" alt="">
-        </div> -->
-        <h1>Campo Minato</h1>
-
-        <button>Play</button>
+        <div class="top-btm-navs flex h-margin">
+            <h1>Campo Minato</h1>
+            <button class="play-btn">Play</button>
         </div>
     </header>
+
     <div class="container flex">
         <div class="grid-container">
-            <div class="grid-row flex">
-                <!-- <div class="cell"></div>                -->
+            <div class="grid-row display-none">
+                <!-- <div class="cell"></div> -->
             </div>
-        </div>
-        
+        </div>     
     </div>
 
     <footer>
-        <div class="top-btm-navs flex">
+        <div class="top-btm-navs flex h-margin">
             <h5>Made with &hearts; by Boolean</h5>
         </div>
     </footer>
