Reorganized and stylized header

--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/style.css">
     <title>Campo Minato</title>
 </head>
 <body>
     <header>
         <div class="top-btm-navs flex h-margin">
-            <h1>Campo Minato</h1>
-            <button class="play-btn">Play</button>
+            <div class="top-sx-div flex">
+                <img id="logo" src="img/boolean-logo.png" alt="boolean-logo">
+                <h1 id="game-title">Campo Minato</h1>
+            </div>
+            
+            <div>
+                <button class="refresh-btn"><a href="http://127.0.0.1:5500/"><i class="fa-solid fa-rotate-left"></i></a></button>
+                <button class="play-btn"><strong>PLAY</strong></button>
+            </div>
         </div>
     </header>
 
     <div class="container flex">
         <div class="grid-container">
             <div class="grid-row display-none">
-                <!-- <div class="cell"></div> -->
+                <!-- <div class="cell"></div> --> <!-- [CREATED DYNAMICALLY] -->
             </div>
         </div>     
     </div>
@@ -28,6 +39,7 @@
             <h5>Made with &hearts; by Boolean</h5>
         </div>
     </footer>
+
     <script src="JS/script.js"></script>
 </body>
 </html>
