--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer>
         <div class="top-btm-navs flex h-margin">
-            <h5>Made with &hearts; by Boolean</h5>
+            <h5>Made with &hearts; by <a href="#">Boolean</a></h5>
         </div>
     </footer>
 
